--- a/src/resources/views/me/my-home.hbs
+++ b/src/resources/views/me/my-home.hbs
@@ -3,6 +3,8 @@
 </header>
 
 
+<a href="/file/list-name.xlsx" id="my-table-id" style="">Tải file excel để nhập danh sách khách mời ở đây</a>
+
 <div class="mt-4 container">
     <div class="row">
 
@@ -25,16 +27,3 @@
 
     </div>
 </div>
-
-<div id="welcomeMessage "></div>
-
-
-<script>
-
-
-  let logout = document.getElementById('logout');
-  logout.onclick = () => {
-    localStorage.removeItem('account');
-  }
-
-</script>
