--- a/src/public/css/app.css
+++ b/src/public/css/app.css
@@ -8,12 +8,14 @@ button {
   cursor: pointer; }
 
 .background {
-  background-repeat: no-repeat;
-  background-attachment: fixed;
   background-size: 100% 100%; }
 
 .invitation-card-item {
   margin-top: 12px; }
+
+.home-img {
+  width: 100%;
+  height: inherit; }
 
 .user-avatar {
   width: 28px;
