--- a/src/resources/views/cards/invitationClassic.hbs
+++ b/src/resources/views/cards/invitationClassic.hbs
@@ -87,7 +87,7 @@
   let account = JSON.parse(localStorage.getItem('account'));
   let id = window.location.href.split('/').pop().split('?').toString();
   let fontStyle;
-  let fileExcel;
+  let fileName;
   var form = document.getElementById('formdata');
   let inputGroupSelect01 = document.getElementById('inputGroupSelect01');
 
@@ -128,8 +128,8 @@
           // Here is your object
           var XL_row_object = XLSX.utils.sheet_to_row_object_array(workbook.Sheets[sheetName]);
           var json_object = JSON.stringify(XL_row_object);
-          console.log(JSON.parse(json_object));
           jQuery('#xlx_json').val(json_object);
+          fileName = JSON.parse(json_object);
         })
       };
 
@@ -169,7 +169,8 @@
                 author:  account.id,
                 image:'{{card.image}}',
                 fontFamily: fontStyle,
-                role: '651fd7721d136cf306d3ce59'
+                role: '651fd7721d136cf306d3ce59',
+                fileName: fileName
             }
         }).then(res => {
             window.location.href = "/me/my-home";
